--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
             <li class="nav__item">
               <span class="nav__item-text">
                 <a
-                  href="https://github.com/"
+                  href="https://github.com/yashii/Teams"
                   class="
                     rounded-full
                     w-12
